--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -54,21 +54,24 @@
 }
 .container-profile ion-button {
   margin: 15px 0;
-  width: 80%;
+  width: 100%;
+  height: 49px;
+  font-size: 24px;
 
 }
 .container-icon-btn {
   position: relative;
-  width: 100%;
+  width: 80%;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .icon-btn {
   position: absolute;
-  top: 11%;
-  left: 30px;
-  width: 55px;
+  top: 13%;
+  left: -5px;
+  height:  55px;
   z-index: 1000;
 }
 .terminal {
