--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,4 +14,15 @@
   </ion-header>
 
   <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-button expand="block" style="margin: 40px 10px 10px 10px" color="secondary" shape="round"
+    [routerLink]="['/login']">
+    Đăng nhập
+  </ion-button>
+  <ion-button expand="block" style="margin: 10px 10px 10px 10px" color="secondary" shape="round"
+    [routerLink]="['/signup']">
+    Đăng ký
+  </ion-button>
+  <ion-button expand="block" style="margin: 10px 10px 10px 10px" color="secondary" shape="round" (click)="logOut()">
+  Đăng xuất
+</ion-button>
 </ion-content>
