--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <!-- <ion-tab-bar slot="bottom">
+  <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
       <ion-label>Home</ion-label>
@@ -15,6 +15,6 @@
       <ion-icon name="square"></ion-icon>
       <ion-label>Tab 3</ion-label>
     </ion-tab-button>
-  </ion-tab-bar> -->
+  </ion-tab-bar>
 
 </ion-tabs>
