--- a/src/global.scss
+++ b/src/global.scss
@@ -9,16 +9,14 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
- 
 /* Core CSS required for Ionic components to work properly */
 @import "~@ionic/angular/css/core.css";
-
 
 /* Basic CSS for apps built with Ionic */
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -26,3 +24,14 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+/* Theme variables */
+.popup-controller {
+  .alert-wrapper.sc-ion-alert-md {
+    max-width: 800px;
+  }
+  .alert-message.sc-ion-alert-md {
+    max-height: 70vh;
+    font-size: 16px;
+  }
+}
